2/Lab/Code/syntax.output
Terminals unused in grammar

   HEX
   OCT


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec error SEMI
    8       | error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC error RC

   16 OptTag: %empty
   17       | ID

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | error RC

   30 StmtList: %empty
   31         | Stmt StmtList

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | RETURN error SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP error RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | IF LP error RP Stmt ELSE Stmt
   40     | IF LP Exp RP error ELSE Stmt
   41     | WHILE LP Exp RP Stmt
   42     | error SEMI

   43 DefList: %empty
   44        | Def DefList

   45 Def: Specifier DecList SEMI
   46    | Specifier error SEMI

   47 DecList: Dec
   48        | Dec COMMA DecList
   49        | error COMMA DecList

   50 Dec: VarDec
   51    | VarDec ASSIGNOP Exp
   52    | VarDec ASSIGNOP error SEMI

   53 Exp: Exp ASSIGNOP Exp
   54    | Exp AND Exp
   55    | Exp OR Exp
   56    | Exp RELOP Exp
   57    | Exp PLUS Exp
   58    | Exp SUB Exp
   59    | Exp STAR Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | SUB Exp
   63    | NOT Exp
   64    | ID LP Args RP
   65    | ID LP RP
   66    | Exp LB Exp RB
   67    | Exp DOT ID
   68    | ID
   69    | INT
   70    | FLOAT
   71    | NONHEX
   72    | NONOCT

   73 Args: Exp COMMA Args
   74     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 15 21 24 29 35 37 39 40 42 46 49 52
INT (258) 20 69
HEX (259)
NONHEX (260) 71
NONOCT (261) 72
OCT (262)
FLOAT (263) 70
ID (264) 17 18 19 22 23 64 65 67 68
TYPE (265) 11
COMMA (266) 10 25 48 49 73
DOT (267) 67
SEMI (268) 4 5 7 8 32 34 35 42 45 46 52
RELOP (269) 56
ASSIGNOP (270) 51 52 53
PLUS (271) 57
SUB (272) 58 62
STAR (273) 59
DIV (274) 60
AND (275) 54
OR (276) 55
NOT (277) 63
LP (278) 22 23 36 37 38 39 40 41 61 64 65
RP (279) 22 23 24 36 37 38 39 40 41 61 64 65
LC (280) 13 15 28
RC (281) 13 15 28 29
LB (282) 20 66
RB (283) 20 21 66
IF (284) 36 37 38 39 40
ELSE (285) 38 39 40
WHILE (286) 41
STRUCT (287) 13 14 15
RETURN (288) 34 35
LOWER_THAN_ELSE (289)


Nonterminals, with rules where they appear

$accept (35)
    左： 0
Program (36)
    左： 1, 右： 0
ExtDefList (37)
    左： 2 3, 右： 1 3
ExtDef (38)
    左： 4 5 6 7 8, 右： 3
ExtDecList (39)
    左： 9 10, 右： 4 10
Specifier (40)
    左： 11 12, 右： 4 5 6 7 27 45 46
StructSpecifier (41)
    左： 13 14 15, 右： 12
OptTag (42)
    左： 16 17, 右： 13 15
Tag (43)
    左： 18, 右： 14
VarDec (44)
    左： 19 20 21, 右： 9 10 20 27 50 51 52
FunDec (45)
    左： 22 23 24, 右： 6 7
VarList (46)
    左： 25 26, 右： 22 25
ParamDec (47)
    左： 27, 右： 25 26
CompSt (48)
    左： 28 29, 右： 6 33
StmtList (49)
    左： 30 31, 右： 28 31
Stmt (50)
    左： 32 33 34 35 36 37 38 39 40 41 42, 右： 31 36 37 38 39
    40 41
DefList (51)
    左： 43 44, 右： 13 28 44
Def (52)
    左： 45 46, 右： 44
DecList (53)
    左： 47 48 49, 右： 45 48 49
Dec (54)
    左： 50 51 52, 右： 47 48
Exp (55)
    左： 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72, 右： 32 34 36 38 40 41 51 53 54 55 56 57 58 59 60 61 62 63
    66 67 73 74
Args (56)
    左： 73 74, 右： 64 73


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          转到状态 4
    ExtDefList       转到状态 5
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  转到状态 11
    Tag     转到状态 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       转到状态 14
    ExtDef           转到状态 6
    Specifier        转到状态 7
    StructSpecifier  转到状态 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec error SEMI

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  转到状态 18
    VarDec      转到状态 19
    FunDec      转到状态 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 10

   17 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 18 (Tag)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 21


State 12

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  接受


State 14

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 15

   21 VarDec: error . RB
   24 FunDec: error . RP

    RP  shift, and go to state 22
    RB  shift, and go to state 23


State 16

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP

    LP  shift, and go to state 24

    $default  reduce using rule 19 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 25


State 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 26
    LB     shift, and go to state 27

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . error SEMI

    error  shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  转到状态 30


State 21

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . error RC

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 43 (DefList)

    Specifier        转到状态 32
    StructSpecifier  转到状态 8
    DefList          转到状态 33
    Def              转到状态 34


State 22

   24 FunDec: error RP .

    $default  reduce using rule 24 (FunDec)


State 23

   21 VarDec: error RB .

    $default  reduce using rule 21 (VarDec)


State 24

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 35
    STRUCT  shift, and go to state 3

    Specifier        转到状态 36
    StructSpecifier  转到状态 8
    VarList          转到状态 37
    ParamDec         转到状态 38


State 25

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 26

   10 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 39
    ID     shift, and go to state 40

    ExtDecList  转到状态 41
    VarDec      转到状态 19


State 27

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 42


State 28

    7 ExtDef: Specifier FunDec error . SEMI
   29 CompSt: error . RC

    SEMI  shift, and go to state 43
    RC    shift, and go to state 44


State 29

   28 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        转到状态 32
    StructSpecifier  转到状态 8
    DefList          转到状态 45
    Def              转到状态 34


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   15 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 46


State 32

   45 Def: Specifier . DecList SEMI
   46    | Specifier . error SEMI

    error  shift, and go to state 47
    ID     shift, and go to state 40

    VarDec   转到状态 48
    DecList  转到状态 49
    Dec      转到状态 50


State 33

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 51


State 34

   44 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 43 (DefList)

    Specifier        转到状态 32
    StructSpecifier  转到状态 8
    DefList          转到状态 52
    Def              转到状态 34


State 35

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 36

   27 ParamDec: Specifier . VarDec

    error  shift, and go to state 39
    ID     shift, and go to state 40

    VarDec  转到状态 53


State 37

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 54


State 38

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 55

    $default  reduce using rule 26 (VarList)


State 39

   21 VarDec: error . RB

    RB  shift, and go to state 23


State 40

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 41

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 42

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 56


State 43

    7 ExtDef: Specifier FunDec error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 44

   29 CompSt: error RC .

    $default  reduce using rule 29 (CompSt)


State 45

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 57
    INT     shift, and go to state 58
    NONHEX  shift, and go to state 59
    NONOCT  shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    SUB     shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65
    LC      shift, and go to state 29
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67
    RETURN  shift, and go to state 68

    RC  reduce using rule 30 (StmtList)

    CompSt    转到状态 69
    StmtList  转到状态 70
    Stmt      转到状态 71
    Exp       转到状态 72


State 46

   15 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 47

   21 VarDec: error . RB
   46 Def: Specifier error . SEMI
   49 DecList: error . COMMA DecList

    COMMA  shift, and go to state 73
    SEMI   shift, and go to state 74
    RB     shift, and go to state 23


State 48

   20 VarDec: VarDec . LB INT RB
   50 Dec: VarDec .
   51    | VarDec . ASSIGNOP Exp
   52    | VarDec . ASSIGNOP error SEMI

    ASSIGNOP  shift, and go to state 75
    LB        shift, and go to state 27

    $default  reduce using rule 50 (Dec)


State 49

   45 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 76


State 50

   47 DecList: Dec .
   48        | Dec . COMMA DecList

    COMMA  shift, and go to state 77

    $default  reduce using rule 47 (DecList)


State 51

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 52

   44 DefList: Def DefList .

    $default  reduce using rule 44 (DefList)


State 53

   20 VarDec: VarDec . LB INT RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 27 (ParamDec)


State 54

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 55

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        转到状态 36
    StructSpecifier  转到状态 8
    VarList          转到状态 78
    ParamDec         转到状态 38


State 56

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 57

   29 CompSt: error . RC
   42 Stmt: error . SEMI

    SEMI  shift, and go to state 79
    RC    shift, and go to state 44


State 58

   69 Exp: INT .

    $default  reduce using rule 69 (Exp)


State 59

   71 Exp: NONHEX .

    $default  reduce using rule 71 (Exp)


State 60

   72 Exp: NONOCT .

    $default  reduce using rule 72 (Exp)


State 61

   70 Exp: FLOAT .

    $default  reduce using rule 70 (Exp)


State 62

   64 Exp: ID . LP Args RP
   65    | ID . LP RP
   68    | ID .

    LP  shift, and go to state 80

    $default  reduce using rule 68 (Exp)


State 63

   62 Exp: SUB . Exp

    INT     shift, and go to state 58
    NONHEX  shift, and go to state 59
    NONOCT  shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    SUB     shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65

    Exp  转到状态 81


State 64

   63 Exp: NOT . Exp

    INT     shift, and go to state 58
    NONHEX  shift, and go to state 59
    NONOCT  shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    SUB     shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65

    Exp  转到状态 82


State 65

   61 Exp: LP . Exp RP

    INT     shift, and go to state 58
    NONHEX  shift, and go to state 59
    NONOCT  shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    SUB     shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65

    Exp  转到状态 83


State 66

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP error RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt
   39     | IF . LP error RP Stmt ELSE Stmt
   40     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 84


State 67

   41 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 85


State 68

   34 Stmt: RETURN . Exp SEMI
   35     | RETURN . error SEMI

    error   shift, and go to state 86
    INT     shift, and go to state 58
    NONHEX  shift, and go to state 59
    NONOCT  shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    SUB     shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65

    Exp  转到状态 87


State 69

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 70

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 88


State 71

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 57
    INT     shift, and go to state 58
    NONHEX  shift, and go to state 59
    NONOCT  shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    SUB     shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65
    LC      shift, and go to state 29
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67
    RETURN  shift, and go to state 68

    RC  reduce using rule 30 (StmtList)

    CompSt    转到状态 69
    StmtList  转到状态 89
    Stmt      转到状态 71
    Exp       转到状态 72


State 72

   32 Stmt: Exp . SEMI
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . SUB Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    DOT       shift, and go to state 90
    SEMI      shift, and go to state 91
    RELOP     shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    PLUS      shift, and go to state 94
    SUB       shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    LB        shift, and go to state 100


State 73

   49 DecList: error COMMA . DecList

    error  shift, and go to state 101
    ID     shift, and go to state 40

    VarDec   转到状态 48
    DecList  转到状态 102
    Dec      转到状态 50


State 74

   46 Def: Specifier error SEMI .

    $default  reduce using rule 46 (Def)


State 75

   51 Dec: VarDec ASSIGNOP . Exp
   52    | VarDec ASSIGNOP . error SEMI

    error   shift, and go to state 103
    INT     shift, and go to state 58
    NONHEX  shift, and go to state 59
    NONOCT  shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    SUB     shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65

    Exp  转到状态 104


State 76

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 77

   48 DecList: Dec COMMA . DecList

    error  shift, and go to state 101
    ID     shift, and go to state 40

    VarDec   转到状态 48
    DecList  转到状态 105
    Dec      转到状态 50


State 78

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 79

   42 Stmt: error SEMI .

    $default  reduce using rule 42 (Stmt)


State 80

   64 Exp: ID LP . Args RP
   65    | ID LP . RP

    INT     shift, and go to state 58
    NONHEX  shift, and go to state 59
    NONOCT  shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    SUB     shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65
    RP      shift, and go to state 106

    Exp   转到状态 107
    Args  转到状态 108


State 81

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . SUB Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   62    | SUB Exp .
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    DOT   shift, and go to state 90
    STAR  shift, and go to state 96
    DIV   shift, and go to state 97
    LB    shift, and go to state 100

    $default  reduce using rule 62 (Exp)


State 82

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . SUB Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   63    | NOT Exp .
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    DOT  shift, and go to state 90
    LB   shift, and go to state 100

    $default  reduce using rule 63 (Exp)


State 83

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . SUB Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   61    | LP Exp . RP
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    DOT       shift, and go to state 90
    RELOP     shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    PLUS      shift, and go to state 94
    SUB       shift, and go to state 95
    STAR      shift, and go to state 96
    DIV       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99
    RP        shift, and go to state 109
    LB        shift, and go to state 100


State 84

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . error RP Stmt
   38     | IF LP . Exp RP Stmt ELSE Stmt
   39     | IF LP . error RP Stmt ELSE Stmt
   40     | IF LP . Exp RP error ELSE Stmt

    error   shift, and go to state 110
    INT     shift, and go to state 58
    NONHEX  shift, and go to state 59
    NONOCT  shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    SUB     shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65

    Exp  转到状态 111


State 85

   41 Stmt: WHILE LP . Exp RP Stmt

    INT     shift, and go to state 58
    NONHEX  shift, and go to state 59
    NONOCT  shift, and go to state 60
    FLOAT   shift, and go to state 61
    ID      shift, and go to state 62
    SUB     shift, and go to state 63
    NOT     shift, and go to state 64
    LP      shift, and go to state 65

    Exp  转到状态 112


State 86

   35 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 113


State 87
